compiler/testData/diagnostics/testsWithJsStdLib/native/nested/nativeInnerClassProhibited.kt
class A {
    <!NATIVE_INNER_CLASS_PROHIBITED!>external inner class B<!>
}

external class C {
    inner external  class D
}
